--- a/packages/testring-client-ws-transport/package.json
+++ b/packages/testring-client-ws-transport/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@testring/constants": "^0.2.4",
-    "@testring/types": "^0.2.2"
+    "@testring/types": "^0.2.2",
+    "@testring/utils": "^0.2.6"
   }
 }
