--- a/packages/testring-recorder-extension/package.json
+++ b/packages/testring-recorder-extension/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@testring/client-ws-transport": "^0.2.2",
     "@testring/types": "^0.2.2",
+    "@testring/utils": "^0.2.6",
     "@types/chrome": "0.0.69",
     "@types/webpack": "4.4.5",
     "mkdirp": "^0.5.1",
