--- a/packages/testring-recorder-backend/package.json
+++ b/packages/testring-recorder-backend/package.json
@@ -26,6 +26,7 @@
     "babel-traverse": "^6.26.0",
     "babel-types": "^6.26.0",
     "babel-generator": "^6.26.1",
+    "babel-template": "^6.26.0",
     "koa": "^2.5.2",
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.4",
