--- a/packages/testring-http-api/package.json
+++ b/packages/testring-http-api/package.json
@@ -15,8 +15,10 @@
     "@testring/test-utils": "^0.2.9",
     "@testring/transport": "^0.2.9",
     "@testring/types": "^0.2.9",
+    "@types/tough-cookie": "^2.3.3",
     "@types/nanoid": "^1.0.0",
     "@types/request-promise": "^4.1.42",
+    "tough-cookie": "^2.4.3",
     "nanoid": "^1.1.0",
     "request-promise": "^4.2.2"
   }
