--- a/packages/testring-http-api/package.json
+++ b/packages/testring-http-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/http-api",
-  "version": "0.2.9",
+  "version": "0.2.10",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,16 +10,16 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/logger": "^0.2.9",
-    "@testring/pluggable-module": "^0.2.9",
-    "@testring/test-utils": "^0.2.9",
-    "@testring/transport": "^0.2.9",
-    "@testring/types": "^0.2.9",
-    "@types/tough-cookie": "^2.3.3",
+    "@testring/logger": "^0.2.10",
+    "@testring/pluggable-module": "^0.2.10",
+    "@testring/test-utils": "^0.2.10",
+    "@testring/transport": "^0.2.10",
+    "@testring/types": "^0.2.10",
     "@types/nanoid": "^1.0.0",
     "@types/request-promise": "^4.1.42",
-    "tough-cookie": "^2.4.3",
+    "@types/tough-cookie": "^2.3.3",
     "nanoid": "^1.1.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "tough-cookie": "^2.4.3"
   }
 }
