--- a/packages/devtool-backend/package.json
+++ b/packages/devtool-backend/package.json
@@ -29,6 +29,7 @@
     "@types/ws": "5.1.2",
     "babel-traverse": "6.26.0",
     "babel-types": "6.26.0",
+    "chokidar": "3.0.0",
     "express": "4.16.4",
     "redux": "4.0.1",
     "ws": "6.0.0"
