--- a/packages/devtool-frontend/package.json
+++ b/packages/devtool-frontend/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@testring/client-ws-transport": "0.5.2",
     "@testring/types": "0.5.2",
+    "@testring/utils": "0.5.2",
     "@types/react": "16.8.17",
     "@types/react-dom": "16.8.4",
     "@types/webpack": "4.4.31",
