--- a/packages/dependencies-builder/package.json
+++ b/packages/dependencies-builder/package.json
@@ -10,6 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
+    "@testring/devtool-execution-wrapper": "0.5.2",
     "@testring/test-utils": "0.5.2",
     "@testring/types": "0.5.2",
     "@testring/utils": "0.5.2",
