--- a/packages/devtool-execution-wrapper/package.json
+++ b/packages/devtool-execution-wrapper/package.json
@@ -15,7 +15,8 @@
     "@babel/types": "7.4.4",
     "@testring/transport": "0.5.2",
     "@testring/types": "0.5.2",
-    "@types/babel-types": "7.0.7"
+    "@types/babel-types": "7.0.7",
+    "babel-plugin-transform-function-bind": "6.22.0"
   },
   "devDependencies": {}
 }
