--- a/packages/devtool-execution-plugin/package.json
+++ b/packages/devtool-execution-plugin/package.json
@@ -16,8 +16,7 @@
     "@testring/transport": "0.5.2",
     "@testring/types": "0.5.2",
     "@types/babel-types": "7.0.7",
-    "@types/babel__core": "7.1.2",
-    "babel-plugin-transform-function-bind": "6.22.0"
+    "@types/babel__core": "7.1.2"
   },
   "devDependencies": {}
 }
