--- a/packages/sandbox/package.json
+++ b/packages/sandbox/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@testring/api": "0.5.2",
+    "@testring/devtool-execution-plugin": "0.5.2",
     "@testring/test-utils": "0.5.2",
     "@testring/types": "0.5.2",
     "@testring/utils": "0.5.2"
