--- a/packages/sandbox/package.json
+++ b/packages/sandbox/package.json
@@ -13,6 +13,7 @@
     "@testring/api": "0.5.2",
     "@testring/devtool-execution-plugin": "0.5.2",
     "@testring/test-utils": "0.5.2",
+    "@testring/transport": "0.5.2",
     "@testring/types": "0.5.2",
     "@testring/utils": "0.5.2"
   }
