--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -18,8 +18,9 @@
     "@types/deepmerge": "2.2.0",
     "@types/node": "10.5.6",
     "@types/webdriverio": "4.10.3",
-    "chromedriver": "76.0.0",
+    "chromedriver": "76.0.1",
     "deepmerge": "2.1.1",
+    "grapheme-splitter": "1.0.4",
     "selenium-server": "3.141.59",
     "webdriverio": "4.13.1"
   }
