--- a/packages/web-application/package.json
+++ b/packages/web-application/package.json
@@ -18,7 +18,8 @@
     "@testring/pluggable-module": "0.5.37",
     "@testring/transport": "0.5.37",
     "@testring/types": "0.5.37",
-    "@testring/utils": "0.5.37"
+    "@testring/utils": "0.5.37",
+    "nanoid": "3.1.30"
   },
   "devDependencies": {
     "@testring/child-process": "0.5.37",
