--- a/packages/plugin-selenium-driver/tsconfig.json
+++ b/packages/plugin-selenium-driver/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es2015",
     "module": "commonjs",
+    "types": ["node", "webdriverio/async"],
     "allowJs": false,
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
