--- a/packages/plugin-babel/package.json
+++ b/packages/plugin-babel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring-dev/plugin-babel",
-  "version": "0.5.37",
+  "version": "0.5.42",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,10 +10,9 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring-dev/plugin-api": "0.5.37",
-    "@types/babel__core": "7.1.15",
     "@babel/core": "7.14.8",
-    "@babel/plugin-transform-modules-commonjs": "7.14.5"
-  },
-  "devDependencies": {}
+    "@babel/plugin-transform-modules-commonjs": "7.14.5",
+    "@testring-dev/plugin-api": "0.5.42",
+    "@types/babel__core": "7.1.15"
+  }
 }
