--- a/packages/element-path/package.json
+++ b/packages/element-path/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@testring-dev/element-path",
-  "version": "0.5.37",
+  "name": "@testring/element-path",
+  "version": "0.5.36",
   "main": "./dist/index.js",
   "typings": "./src/index.ts",
   "repository": {
