--- a/packages/plugin-babel/package.json
+++ b/packages/plugin-babel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/plugin-babel",
-  "version": "0.5.37",
+  "version": "0.5.36",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -9,10 +9,10 @@
   },
   "author": "RingCentral",
   "license": "MIT",
-  "dependencies": {,
+  "dependencies": {
     "@babel/core": "7.14.8",
     "@babel/plugin-transform-modules-commonjs": "7.14.5",
-    "@testring/plugin-api": "0.5.37",
+    "@testring/plugin-api": "0.5.36",
     "@types/babel__core": "7.1.15"
   }
 }
