--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: '14.x'
           registry-url: 'https://registry.npmjs.org'
+      - run: npm ci
       - run: npm run publish:version ${{ github.event.inputs.version }}
       - run: npm run publish:ci
         env:
