--- a/core/cli-config/package.json
+++ b/core/cli-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/cli-config",
-  "version": "0.6.14-alpha.6",
+  "version": "0.7.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,9 +10,9 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/logger": "0.6.14-alpha.6",
-    "@testring/types": "0.6.14-alpha.6",
-    "@testring/utils": "0.6.14-alpha.6",
+    "@testring/logger": "0.7.0",
+    "@testring/types": "0.7.0",
+    "@testring/utils": "0.7.0",
     "@types/deepmerge": "2.2.3",
     "@types/yargs": "17.0.33",
     "deepmerge": "4.3.1",
