--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/cli",
-  "version": "0.6.14-alpha.6",
+  "version": "0.7.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,19 +10,19 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/browser-proxy": "0.6.14-alpha.6",
-    "@testring/cli-config": "0.6.14-alpha.6",
-    "@testring/devtool-backend": "0.6.14-alpha.6",
-    "@testring/fs-reader": "0.6.14-alpha.6",
-    "@testring/fs-store": "0.6.14-alpha.6",
-    "@testring/http-api": "0.6.14-alpha.6",
-    "@testring/logger": "0.6.14-alpha.6",
-    "@testring/plugin-api": "0.6.14-alpha.6",
-    "@testring/test-run-controller": "0.6.14-alpha.6",
-    "@testring/test-worker": "0.6.14-alpha.6",
-    "@testring/transport": "0.6.14-alpha.6",
-    "@testring/types": "0.6.14-alpha.6",
-    "@testring/web-application": "0.6.14-alpha.6",
+    "@testring/browser-proxy": "0.7.0",
+    "@testring/cli-config": "0.7.0",
+    "@testring/devtool-backend": "0.7.0",
+    "@testring/fs-reader": "0.7.0",
+    "@testring/fs-store": "0.7.0",
+    "@testring/http-api": "0.7.0",
+    "@testring/logger": "0.7.0",
+    "@testring/plugin-api": "0.7.0",
+    "@testring/test-run-controller": "0.7.0",
+    "@testring/test-worker": "0.7.0",
+    "@testring/transport": "0.7.0",
+    "@testring/types": "0.7.0",
+    "@testring/web-application": "0.7.0",
     "@types/node": "22.8.5",
     "@types/yargs": "17.0.33",
     "yargs": "17.7.2"
