--- a/core/sandbox/package.json
+++ b/core/sandbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/sandbox",
-  "version": "0.6.14-alpha.6",
+  "version": "0.7.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,9 +10,9 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/api": "0.6.14-alpha.6",
-    "@testring/test-utils": "0.6.14-alpha.6",
-    "@testring/types": "0.6.14-alpha.6",
-    "@testring/utils": "0.6.14-alpha.6"
+    "@testring/api": "0.7.0",
+    "@testring/test-utils": "0.7.0",
+    "@testring/types": "0.7.0",
+    "@testring/utils": "0.7.0"
   }
 }
