--- a/core/testring/package.json
+++ b/core/testring/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testring",
-  "version": "0.6.14-alpha.6",
+  "version": "0.7.0",
   "description": "Main package with CLI interface and test API.",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
@@ -14,7 +14,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/api": "0.6.14-alpha.6",
-    "@testring/cli": "0.6.14-alpha.6"
+    "@testring/api": "0.7.0",
+    "@testring/cli": "0.7.0"
   }
 }
