--- a/packages/client-ws-transport/package.json
+++ b/packages/client-ws-transport/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/client-ws-transport",
-  "version": "0.6.14-alpha.6",
+  "version": "0.7.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,7 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/types": "0.6.14-alpha.6",
-    "@testring/utils": "0.6.14-alpha.6"
+    "@testring/types": "0.7.0",
+    "@testring/utils": "0.7.0"
   }
 }
