--- a/packages/download-collector-crx/package.json
+++ b/packages/download-collector-crx/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@testring/dwnld-collector-crx",
-    "version": "0.6.14-alpha.6",
+    "version": "0.7.0",
     "main": "./dist/index.js",
     "types": "./index.d.ts",
     "repository": {
