--- a/packages/plugin-babel/package.json
+++ b/packages/plugin-babel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/plugin-babel",
-  "version": "0.6.14-alpha.6",
+  "version": "0.7.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -12,7 +12,7 @@
   "dependencies": {
     "@babel/core": "7.26.0",
     "@babel/plugin-transform-modules-commonjs": "7.25.9",
-    "@testring/plugin-api": "0.6.14-alpha.6",
+    "@testring/plugin-api": "0.7.0",
     "@types/babel__core": "7.20.5"
   }
 }
