--- a/packages/plugin-fs-store/package.json
+++ b/packages/plugin-fs-store/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/plugin-fs-store",
-  "version": "0.6.14-alpha.6",
+  "version": "0.7.0",
   "description": "fs storage & default plugin",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
@@ -11,12 +11,12 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/plugin-api": "0.6.14-alpha.6",
-    "@testring/types": "0.6.14-alpha.6",
-    "@testring/utils": "0.6.14-alpha.6"
+    "@testring/plugin-api": "0.7.0",
+    "@testring/types": "0.7.0",
+    "@testring/utils": "0.7.0"
   },
   "devDependencies": {
-    "@testring/transport": "0.6.14-alpha.6"
+    "@testring/transport": "0.7.0"
   },
   "scripts": {
     "test": "mocha"
